tests/NormalTests/paczka1/small_fuzzy/93712119.err
Error in line 2: S206 A287 1,6
Error in line 6: S206 A316 72,3
Error in line 12: S206 A287 -3,7
